--- a/packages/hashing/package.json
+++ b/packages/hashing/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "prepublishOnly": "npm run docs",
-    "prepare": "tsc -p . && cp -r src/fractions dist/fractions",
+    "prepare": "tsc -p . ",
     "test": "exit 0",
     "lint": "eslint .",
     "format": "prettier --write .",
